--- a/package.json
+++ b/package.json
@@ -2,13 +2,9 @@
   "name": "ProjectHTML",
   "version": "1.0.0",
   "main": "index.js",
-  "dependencies": {
-    "node-sass": "^7.0.1",
-    "nodemon": "^2.0.15"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "node-sass": "^7.0.1",
-    "nodemon": "^2.0.15"
+    "sass": "^1.45.2"
   },
   "scripts": {
     "sass": "sass --watch --update --style=expanded src/assets/scss:src/assets/css"
